--- a/main.ipynb
+++ b/main.ipynb
@@ -1712,6 +1712,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_text_data = {\n",
+    "    k:v[\"/V\"] for k, v in reader.get_fields().items()\n",
+    "    if isinstance(v, dict) and \"/V\" in v.keys()\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'MANufACTuRERS NAME': 'Waymo LLC',\n",
+       " 'BuSINESS NAME': 'Waymo LLC',\n",
+       " 'DATE Of ACCIDENT': '07/02/2024',\n",
+       " 'Time of Accident': '3:09',\n",
+       " 'PM': '/ ',\n",
+       " 'VEhICLE YEAR': '2024',\n",
+       " 'MAkE': 'Jaguar',\n",
+       " 'MODEL': 'I-Pace',\n",
+       " 'STATE VEhICLE IS REGISTERED IN': 'CA',\n",
+       " 'section 2  accident infoRmation.0': 'Sycamore Avenue near W. Pico Boulevard',\n",
+       " 'section 2  accident infoRmation.1.0': 'Los Angeles',\n",
+       " 'section 2  accident infoRmation.1.1.0': 'Los Angeles',\n",
+       " 'section 2  accident infoRmation.1.1.1.0': 'CA',\n",
+       " 'section 2  accident infoRmation.1.1.1.1': '90019',\n",
+       " 'Stopped in Traffic': '/ ',\n",
+       " 'NuMBER Of VEhICLES INVOLVED': '2',\n",
+       " 'minor': '/Yes',\n",
+       " 'Left Rear 2': '/Yes',\n",
+       " 'STATE VEhICLE IS REGISTERED IN_2': 'CA',\n",
+       " 'Moving_2': '/ ',\n",
+       " 'NuMBER Of VEhICLES INVOLVED_2': '2',\n",
+       " 'ADDRESS_2.1.0.1': 'On July 2, 2024 at 3:09 PM PT a Waymo Autonomous Vehicle (“Waymo AV”) operating in Los Angeles, California was in a collision involving a pickup truck on Sycamore Avenue near W. Pico Boulevard. \\r\\rThe Waymo AV was traveling northbound on Sycamore Avenue when it came to a stop to yield to an oncoming pickup truck in a narrow roadway with parked vehicles on both sides of the street. As the oncoming pickup truck passed the stopped Waymo AV, the front driver’s side of the pickup truck made contact with the driver’s side rear of the Waymo AV. At the time of the impact, the Waymo AV’s Level 4 ADS was engaged in autonomous mode. The Waymo AV sustained damage and the pickup truck left the scene.\\r',\n",
+       " 'Autonomous Mode': '/ ',\n",
+       " 'WEATHER A 1': '/Yes',\n",
+       " 'WEATHER A 2': '/Yes',\n",
+       " 'LIGHTING A 1': '/Yes',\n",
+       " 'LIGHTING A 2': '/Yes',\n",
+       " 'ROADWAY A 1': '/Yes',\n",
+       " 'ROADWAY A 2': '/Yes',\n",
+       " 'ROAD CONDITIONS H 1': '/Yes',\n",
+       " 'ROAD CONDITIONS H 2': '/Yes',\n",
+       " 'MOVEMENT A 1': '/Yes',\n",
+       " 'MOVEMENT  I 2': '/Yes',\n",
+       " 'TYPE B 2': '/Yes',\n",
+       " 'PROGRAM DIRECTORAuThORIZED REPRESENTATIVE PRINTED NAME AND TITLE': 'Gabrielle Calvillo '}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_text_data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
