--- a/main.ipynb
+++ b/main.ipynb
@@ -1648,10 +1648,132 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MANufACTuRERS NAME</th>\n",
+       "      <th>BuSINESS NAME</th>\n",
+       "      <th>DATE Of ACCIDENT</th>\n",
+       "      <th>Time of Accident</th>\n",
+       "      <th>PM</th>\n",
+       "      <th>VEhICLE YEAR</th>\n",
+       "      <th>MAkE</th>\n",
+       "      <th>MODEL</th>\n",
+       "      <th>STATE VEhICLE IS REGISTERED IN</th>\n",
+       "      <th>section 2  accident infoRmation.0</th>\n",
+       "      <th>...</th>\n",
+       "      <th>LIGHTING A 1</th>\n",
+       "      <th>LIGHTING A 2</th>\n",
+       "      <th>ROADWAY A 1</th>\n",
+       "      <th>ROADWAY A 2</th>\n",
+       "      <th>ROAD CONDITIONS H 1</th>\n",
+       "      <th>ROAD CONDITIONS H 2</th>\n",
+       "      <th>MOVEMENT A 1</th>\n",
+       "      <th>MOVEMENT  I 2</th>\n",
+       "      <th>TYPE B 2</th>\n",
+       "      <th>PROGRAM DIRECTORAuThORIZED REPRESENTATIVE PRINTED NAME AND TITLE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Waymo LLC</td>\n",
+       "      <td>Waymo LLC</td>\n",
+       "      <td>07/02/2024</td>\n",
+       "      <td>3:09</td>\n",
+       "      <td>/</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Jaguar</td>\n",
+       "      <td>I-Pace</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Sycamore Avenue near W. Pico Boulevard</td>\n",
+       "      <td>...</td>\n",
+       "      <td>/Yes</td>\n",
+       "      <td>/Yes</td>\n",
+       "      <td>/Yes</td>\n",
+       "      <td>/Yes</td>\n",
+       "      <td>/Yes</td>\n",
+       "      <td>/Yes</td>\n",
+       "      <td>/Yes</td>\n",
+       "      <td>/Yes</td>\n",
+       "      <td>/Yes</td>\n",
+       "      <td>Gabrielle Calvillo</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  MANufACTuRERS NAME BuSINESS NAME DATE Of ACCIDENT Time of Accident  PM  \\\n",
+       "0          Waymo LLC     Waymo LLC       07/02/2024             3:09  /    \n",
+       "\n",
+       "  VEhICLE YEAR    MAkE   MODEL STATE VEhICLE IS REGISTERED IN  \\\n",
+       "0         2024  Jaguar  I-Pace                             CA   \n",
+       "\n",
+       "        section 2  accident infoRmation.0  ... LIGHTING A 1 LIGHTING A 2  \\\n",
+       "0  Sycamore Avenue near W. Pico Boulevard  ...         /Yes         /Yes   \n",
+       "\n",
+       "  ROADWAY A 1 ROADWAY A 2 ROAD CONDITIONS H 1 ROAD CONDITIONS H 2  \\\n",
+       "0        /Yes        /Yes                /Yes                /Yes   \n",
+       "\n",
+       "  MOVEMENT A 1 MOVEMENT  I 2 TYPE B 2  \\\n",
+       "0         /Yes          /Yes     /Yes   \n",
+       "\n",
+       "  PROGRAM DIRECTORAuThORIZED REPRESENTATIVE PRINTED NAME AND TITLE  \n",
+       "0                                Gabrielle Calvillo                 \n",
+       "\n",
+       "[1 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame([filtered_text_data])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv(\"./accident_data.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
